--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link href='https://fonts.googleapis.com/css?family=Noto+Serif' rel='stylesheet'>
     <script src="js/main.js" defer></script>
+    <script src="js/properties.js" defer></script>
     <title>Document</title>
 </head>
 <body>
@@ -115,65 +116,85 @@
                             </div>
                         </div>
                     </div>
-                    <div class="properties__column">
-                        <div class="properties__item">
-                            <div class="properties__item-icon">
-                                <img src="img/properties/1.svg" alt="house">
+                    <div class="properties__slider">
+                        <div class="properties__column">
+                            <div class="properties__item">
+                                <div class="properties__item-icon">
+                                    <img src="img/properties/1.svg" alt="house">
+                                </div>
+                                <div class="properties__item-title">Nomaden Omah Sekut</div>
+                                <div class="properties__item-text">San Diego, California, USA</div>
+                                <div class="properties__item-price">$699,000</div>
+                                <div class="properties__item-deteils deteils-item">
+                                    <div class="deteils-item__item">2 Beds</div>
+                                    <div class="deteils-item__item-line"></div>
+                                    <div class="deteils-item__item">1 Bath</div>
+                                    <div class="deteils-item__item-line"></div>
+                                    <div class="deteils-item__item">1,109 sqft</div>
+                                </div>
+                                <div class="properties__item-buttons">
+                                    <button class="properties__item-button">See Details</button>
+                                </div>
                             </div>
-                            <div class="properties__item-title">Nomaden Omah Sekut</div>
-                            <div class="properties__item-text">San Diego, California, USA</div>
-                            <div class="properties__item-price">$699,000</div>
-                            <div class="properties__item-deteils deteils-item">
-                                <div class="deteils-item__item">2 Beds</div>
-                                <div class="deteils-item__item-line"></div>
-                                <div class="deteils-item__item">1 Bath</div>
-                                <div class="deteils-item__item-line"></div>
-                                <div class="deteils-item__item">1,109 sqft</div>
+                            <div class="properties__item">
+                                <div class="properties__item-icon">
+                                    <img src="img/properties/2.svg" alt="house">
+                                </div>
+                                <div class="properties__item-title">Real Bluestyle House</div>
+                                <div class="properties__item-text">San Diego, California, USA</div>
+                                <div class="properties__item-price">$10,00,000</div>
+                                <div class="properties__item-deteils deteils-item">
+                                    <div class="deteils-item__item">3 Beds</div>
+                                    <div class="deteils-item__item-line"></div>
+                                    <div class="deteils-item__item">2 Bath</div>
+                                    <div class="deteils-item__item-line"></div>
+                                    <div class="deteils-item__item">1,309 sqft</div>
+                                </div>
+                                <div class="properties__item-buttons">
+                                    <button class="properties__item-button">See Details</button>
+                                </div>
                             </div>
-                            <div class="properties__item-buttons">
-                                <button class="properties__item-button">See Details</button>
+                            <div class="properties__item">
+                                <div class="properties__item-icon">
+                                    <img src="img/properties/3.svg" alt="house">
+                                </div>
+                                <div class="properties__item-title">Luxury Umahu Mantappu</div>
+                                <div class="properties__item-text">San Diego, California, USA</div>
+                                <div class="properties__item-price">$599,000</div>
+                                <div class="properties__item-deteils deteils-item">
+                                    <div class="deteils-item__item">2 Beds</div>
+                                    <div class="deteils-item__item-line"></div>
+                                    <div class="deteils-item__item">1 Bath</div>
+                                    <div class="deteils-item__item-line"></div>
+                                    <div class="deteils-item__item">1,009 sqft</div>
+                                </div>
+                                <div class="properties__item-buttons">
+                                    <button class="properties__item-button">See Details</button>
+                                </div>
                             </div>
-                        </div>
-                        <div class="properties__item">
-                            <div class="properties__item-icon">
-                                <img src="img/properties/2.svg" alt="house">
-                            </div>
-                            <div class="properties__item-title">Real Bluestyle House</div>
-                            <div class="properties__item-text">San Diego, California, USA</div>
-                            <div class="properties__item-price">$10,00,000</div>
-                            <div class="properties__item-deteils deteils-item">
-                                <div class="deteils-item__item">3 Beds</div>
-                                <div class="deteils-item__item-line"></div>
-                                <div class="deteils-item__item">2 Bath</div>
-                                <div class="deteils-item__item-line"></div>
-                                <div class="deteils-item__item">1,309 sqft</div>
-                            </div>
-                            <div class="properties__item-buttons">
-                                <button class="properties__item-button">See Details</button>
-                            </div>
-                        </div>
-                        <div class="properties__item">
-                            <div class="properties__item-icon">
-                                <img src="img/properties/3.svg" alt="house">
-                            </div>
-                            <div class="properties__item-title">Luxury Umahu Mantappu</div>
-                            <div class="properties__item-text">San Diego, California, USA</div>
-                            <div class="properties__item-price">$599,000</div>
-                            <div class="properties__item-deteils deteils-item">
-                                <div class="deteils-item__item">2 Beds</div>
-                                <div class="deteils-item__item-line"></div>
-                                <div class="deteils-item__item">1 Bath</div>
-                                <div class="deteils-item__item-line"></div>
-                                <div class="deteils-item__item">1,009 sqft</div>
-                            </div>
-                            <div class="properties__item-buttons">
-                                <button class="properties__item-button">See Details</button>
+                            <div class="properties__item">
+                                <div class="properties__item-icon">
+                                    <img src="img/properties/1.svg" alt="house">
+                                </div>
+                                <div class="properties__item-title">Nomaden Omah Sekut</div>
+                                <div class="properties__item-text">San Diego, California, USA</div>
+                                <div class="properties__item-price">$699,000</div>
+                                <div class="properties__item-deteils deteils-item">
+                                    <div class="deteils-item__item">2 Beds</div>
+                                    <div class="deteils-item__item-line"></div>
+                                    <div class="deteils-item__item">1 Bath</div>
+                                    <div class="deteils-item__item-line"></div>
+                                    <div class="deteils-item__item">1,109 sqft</div>
+                                </div>
+                                <div class="properties__item-buttons">
+                                    <button class="properties__item-button">See Details</button>
+                                </div>
                             </div>
                         </div>
                     </div>
                     <div class="properties__buttons">
-                        <button class="properties__button">←</button>
-                        <button class="properties__button active">→</button>
+                        <button class="properties__button prev">←</button>
+                        <button class="properties__button next active">→</button>
                     </div>
                 </div>
             </div>
